Fixed overflow issue

--- a/client/src/sass/components/_LeftContainer.scss
+++ b/client/src/sass/components/_LeftContainer.scss
@@ -5,7 +5,7 @@
 
   .display-area {
     position: relative;
-    overflow-y: scroll;
+    overflow-y: auto;
     display: block;
     height: calc(100% - 175px);
   }
